--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Porfolio em Andamento</h1>
+<p>Nesta página estarão projetos já realizados por mim, seja como Diretor de Projetos da META Empresa Júnior, acadêmico ou quaisquer outras denominações.</p>
+<p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
+<p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
+<p>Início da Migração em 19 de Março de 2021</p>
 </body>
 </html>
