--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 <p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
 <p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
 <p>Início da Migração em 19 de Março de 2021</p>
+
+<div id="myProgress">
+  <div id="myBar">10%</div>
+</div>
+
+
 </body>
 </html>
