--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <div id="myBar">10%</div>
 </div>
 
+#myProgress {
+  width: 100%;
+  background-color: grey;
+}
 
+#myBar {
+  width: 1%;
+  height: 30px;
+  background-color: green;
+}
 </body>
 </html>
