--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="https://kit.fontawesome.com/c455839e04.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
 <h1>Porfolio em Andamento</h1>
 <p>Nesta página estarão projetos já realizados por mim, seja como Diretor de Projetos da META Empresa Júnior, acadêmico ou quaisquer outras denominações.</p>
@@ -7,9 +11,13 @@
 <p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
 <p>Início da Migração em 19 de Março de 2021</p>
 
+<i class="fab fa-linkedin"></i>
+<i class="fab fa-youtube-square"></i>
+<i class="fas fa-file-pdf"></i>
+
+</body>
 <div id="myProgress">
   <div id="myBar">10%</div>
 </div>
 
-</body>
 </html>
