--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .column {
   float: left;
@@ -19,10 +22,9 @@
     width: 100%;
   }
 }
-</style>
 
-<head>
 <script src="https://kit.fontawesome.com/c455839e04.js" crossorigin="anonymous"></script>
+</style>
 </head>
 
 <body>
