--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://kit.fontawesome.com/c455839e04.js" crossorigin="anonymous"></script>
 <style>
 .column {
   float: left;
@@ -43,7 +44,7 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  background-color: #000000;
 }
 
 .container:hover .overlay {
@@ -54,14 +55,13 @@
   color: white;
   font-size: 16px;
   position: absolute;
-  top: 10%;
-  left: 10%;
-  -webkit-transform: translate(-10%, -10%);
-  -ms-transform: translate(-10%, -10%);
-  transform: translate(-10%, -10%);
+  top: 20%;
+  left: 20%;
+  -webkit-transform: translate(-20%, -20%);
+  -ms-transform: translate(-20%, -20%);
+  transform: translate(-20%, -20%);
   text-align: justify;
 }
-<script src="https://kit.fontawesome.com/c455839e04.js" crossorigin="anonymous"></script>
 </style>
 </head>
 
@@ -86,12 +86,10 @@
 				<div class="text"> Projeto de uma Mesa Transportadora de Roletes
 desenvolvida com o intuito de aplicar os conhecimentos de maneira prática através
 do desenvolvimento de um produto único e pronto para fabricação, que atende às normas
-e às especificações do cliente.</div>
+e às especificações do cliente.<a href="https://drive.google.com/file/d/1lyLu71kiAmAL-vf_z3JNRxk_4_Y_EZa-/view?usp=sharing">
+<p><img src="pdf.png";"></p></a></div>
 			</div>
 		</div>
-	<i class="fab fa-linkedin"></i>
-	<i class="fab fa-youtube-square"></i>
-	<i class="fas fa-file-pdf"></i>
 	</div>
 	
 	<div class="column">
@@ -105,5 +103,76 @@ e às especificações do cliente.</div>
 	</div>
 </div>
 
+<div class="row">
+	<div class="column">
+	<h2>Máscaras em Filamento Flexível</h2>
+	<p>Projeto de máscaras ergonômicas e com fator de proteção ao Covid-19</p>
+	</div>
+	
+	<div class="column">
+	<h2>Template LaTeX para Trabalhos Acadêmicos da Uniguaçu</h2>
+	<p>Projeto de um template LaTeX para TCC da Uniguaçu, de maneira a automatizar 
+	a formatação e otimizar o tempo de escrita</p>
+	</div>
+	
+	<div class="column">
+	<h2>Projeto da Capa de Prótese</h2>
+	<p>Projeto de Capa para Prótese Ottobock 3R80</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="column">
+	<h2>Projeto Rondon 2020</h2>
+	<p>Projeto Rondon 2020 realizado em Santa Lúcia, Paraná</p>
+	</div>
+	
+	<div class="column">
+	<h2>Design Inovador de uma Impressora 3D</h2>
+	<p>Projeto de uma impressora 3D funcional com design inovador</p>
+	</div>
+	
+	<div class="column">
+	<h2>Projeto de Pelvis Artirculada</h2>
+	<p>Projeto de uma pelvis feminina articulada e fabricada em impressora 3D</p>
+	</div>
+	
+</div>
+
+<div class="row">
+	<div class="column">
+	<h2>V Corrida de Carrinhos de Rolimã da Uniguaçu</h2>
+	<p>Corrida de Carrinhos de Rolimã</p>
+	</div>
+	
+	<div class="column">
+	<h2>Projeto de um Sistema de Ar Comprimido</h2>
+	<p>Projeto de um sistema de ar comprimido</p>
+	</div>
+	
+	<div class="column">
+	<h2>Projeto de Estruturas Metálicas</h2>
+	<p></p>
+	</div>
+	
+</div>
+
+<div class="row">
+	<div class="column">
+	<h2>Plano de Manutenção Preditiva e Preventiva no Departamento de T.I.</h2>
+	<p></p>
+	</div>
+	
+	<div class="column">
+	<h2>Substituição de ...</h2>
+	<p></p>
+	</div>
+	
+	<div class="column">
+	<h2></h2>
+	<p></p>
+	</div>
+	
+</div>	
 </body>
 </html>
