--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<h2>Esteira Transportadora de Roletes</h2>
 	<p>Projeto de um Mesa Esteira Transportadora de Roletes</p>
 		<div class="container">
-			<img src="mesa_roletes.png" alt="MesaRoletes" class="image">
+			<img src="transrol.png" alt="MesaRoletes" class="image">
 			<div class="overlay">
 				<div class="text"> Projeto de uma Mesa Transportadora de Roletes
 desenvolvida com o intuito de aplicar os conhecimentos de maneira prática através
