--- a/index.html
+++ b/index.html
@@ -3,177 +3,24 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/c455839e04.js" crossorigin="anonymous"></script>
-<style>
-.column {
-  float: left;
-  width: 33.33%;
-}
+<link rel="stylesheet" type="text/css" href="style.css"/>
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
-.container {
-  position: relative;
-  width: 80%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #000000;
-}
-
-.container:hover .overlay {
-  opacity: 1;
-}
-
-.text {
-  color: white;
-  font-size: 16px;
-  position: absolute;
-  top: 20%;
-  left: 20%;
-  -webkit-transform: translate(-20%, -20%);
-  -ms-transform: translate(-20%, -20%);
-  transform: translate(-20%, -20%);
-  text-align: justify;
-}
-</style>
 </head>
 
 <body>
-<h1>Porfolio em Andamento</h1>
-<p>Nesta página estarão projetos já realizados por mim, seja como Diretor de Projetos da META Empresa Júnior, acadêmico ou quaisquer outras denominações.</p>
-<p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
-<p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
-<p>Início da Migração em 19 de Março de 2021</p>
+	<main>
+		<section id="page1" class="page scroll">
+			<a href="page2.html" class="next round">&#8250;</a>
+			<h1>Porfolio em Andamento</h1>
+			<p>Nesta página estarão projetos já realizados por mim, seja como Diretor de Projetos da META Empresa Júnior, acadêmico ou quaisquer outras denominações.</p>
+			<p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
+			<p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
+			<p>Início da Migração em 19 de Março de 2021</p>
 
-<div id="myProgress">
-  <div id="myBar">10%</div>
-</div>
-
-<div class="row">
-	<div class="column">
-	<h2>Esteira Transportadora de Roletes</h2>
-	<p>Projeto de um Mesa Esteira Transportadora de Roletes</p>
-		<div class="container">
-			<img src="transrol.png" alt="MesaRoletes" class="image">
-			<div class="overlay">
-				<div class="text"> Projeto de uma Mesa Transportadora de Roletes
-desenvolvida com o intuito de aplicar os conhecimentos de maneira prática através
-do desenvolvimento de um produto único e pronto para fabricação, que atende às normas
-e às especificações do cliente.<p><a href="https://drive.google.com/file/d/1q7xAZ3ECaqDLictj4B3iKxCFMfDsgX6x/view?usp=sharing">
-<img src="pdf.png";"></a><a href="https://drive.google.com/file/d/1RqocccgNj1bJZPnss1aojaMsYUqzFtdC/view?usp=sharing">
-<img src="pdf.png";"></a></p></div>
+			<div id="myProgress">
+			  <div id="myBar">10%</div>
 			</div>
-		</div>
-	</div>
-	
-	<div class="column">
-	<h2>Face Shields</h2>
-	<p>Projeto de um Face Shields desenvolvidas ...</p>
-	</div>
-	
-	<div class="column">
-	<h2>Projeto Caixa de Redução</h2>
-	<p>Projeto de uma Caixa de Redução produzida através da Manufatura Aditiva</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="column">
-	<h2>Máscaras em Filamento Flexível</h2>
-	<p>Projeto de máscaras ergonômicas e com fator de proteção ao Covid-19</p>
-	</div>
-	
-	<div class="column">
-	<h2>Template LaTeX para Trabalhos Acadêmicos da Uniguaçu</h2>
-	<p>Projeto de um template LaTeX para TCC da Uniguaçu, de maneira a automatizar 
-	a formatação e otimizar o tempo de escrita</p>
-	</div>
-	
-	<div class="column">
-	<h2>Projeto da Capa de Prótese</h2>
-	<p>Projeto de Capa para Prótese Ottobock 3R80</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="column">
-	<h2>Projeto Rondon 2020</h2>
-	<p>Projeto Rondon 2020 realizado em Santa Lúcia, Paraná</p>
-	</div>
-	
-	<div class="column">
-	<h2>Design Inovador de uma Impressora 3D</h2>
-	<p>Projeto de uma impressora 3D funcional com design inovador</p>
-	</div>
-	
-	<div class="column">
-	<h2>Projeto de Pelvis Artirculada</h2>
-	<p>Projeto de uma pelvis feminina articulada e fabricada em impressora 3D</p>
-	</div>
-	
-</div>
-
-<div class="row">
-	<div class="column">
-	<h2>V Corrida de Carrinhos de Rolimã da Uniguaçu</h2>
-	<p>Corrida de Carrinhos de Rolimã</p>
-	</div>
-	
-	<div class="column">
-	<h2>Projeto de um Sistema de Ar Comprimido</h2>
-	<p>Projeto de um sistema de ar comprimido</p>
-	</div>
-	
-	<div class="column">
-	<h2>Projeto de Estruturas Metálicas</h2>
-	<p></p>
-	</div>
-	
-</div>
-
-<div class="row">
-	<div class="column">
-	<h2>Plano de Manutenção Preditiva e Preventiva no Departamento de T.I.</h2>
-	<p></p>
-	</div>
-	
-	<div class="column">
-	<h2>Substituição de ...</h2>
-	<p></p>
-	</div>
-	
-	<div class="column">
-	<h2></h2>
-	<p></p>
-	</div>
-	
-</div>	
+		</section>
+	</main>	
 </body>
 </html>
