--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main>
-		<section id="page2" class="page">
+		<section id="page2" class="page scroll">
 		<div class="container">
 		<a href="index.html" class="previous round">&#8249;</a>
 		<a href="page3.hmtl" class="next round">&#8250;</a>
