--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main>
-		<section id="page2" class="page scroll">
+		<section id="page2" class="page">
 		<div class="container">
 		<a href="index.html" class="previous round">&#8249;</a>
 		<a href="page3.hmtl" class="next round">&#8250;</a>
@@ -20,13 +20,6 @@
 						<div class="overlay">
 							<div class="text"> 
 							<h1>Mesa Transportadora de Roletes</h1>
-							<p>Projeto de um Mesa Esteira Transportadora de Roletes</p>
-							<p>Projeto de uma Mesa Transportadora de Roletes
-			desenvolvida com o intuito de aplicar os conhecimentos de maneira prática através
-			do desenvolvimento de um produto único e pronto para fabricação, que atende às normas
-			e às especificações do cliente.<p><a href="https://drive.google.com/file/d/1q7xAZ3ECaqDLictj4B3iKxCFMfDsgX6x/view?usp=sharing">
-			<img src="pdf.png";></a><a href="https://drive.google.com/file/d/1RqocccgNj1bJZPnss1aojaMsYUqzFtdC/view?usp=sharing">
-			<img src="pdf.png";></a></p>
 							</div>
 						</div>
 					</div>
