--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 <body>
 	<main>
 		<section id="page1" class="page scroll">
-			<a href="page2.html" class="next round">&#8250;</a>
 			<h1>Porfolio em Andamento</h1>
 			<p>Nesta página estarão projetos já realizados por mim, seja como Diretor de Projetos da META Empresa Júnior, acadêmico ou quaisquer outras denominações.</p>
 			<p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
 			<p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
-
-			<div id="myProgress">
-			  <div id="myBar">10%</div>
-			</div>
+			<h2>Site provisório enquanto configuro este em HTML e CSS.</h2>
+			<a href="https://sites.google.com/uniguacu.edu.br/
+portfoliomateuscarneiro" </a>
 		</section>
 	</main>	
 </body>
