--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 			<p>Sinta-se à vontade para me perguntar sobre meus projetos pessoalmente.</p>
 			<p>Estou migrando meus projetos para o Github de forma a facilitar o acesso e alocar futuros projetos.</p>
 			<h2>Site provisório enquanto configuro este em HTML e CSS.</h2>
-			<a href="https://sites.google.com/uniguacu.edu.br/
-portfoliomateuscarneiro" </a>
+			<form action="https://sites.google.com/uniguacu.edu.br/portfoliomateuscarneiro">
+				<input type="submit" value="Portfólio Provisório" />
+			</form>
 		</section>
 	</main>	
 </body>
